# plugin_template

./: README.rst  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/scripts/: prep_release.py
.github/workflows/: preview_docs.yml
moe_plugin/: my_plugin.py
tests/: conftest.py  test_my_plugin.py
