[tool.poetry]
name = "moe_{plugin name}"
version = "0.1.0"
description = "Template plugin repository."
authors = ["{your name} <your email>"]
documentation = "https://moe-{plugin name}.readthedocs.io/en/latest/"
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
moe = "^2.1.3"

[tool.poetry.group.test.dependencies]
debugpy = "^1.4.1"
pytest = "^8.0.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.lint.dependencies]
black = "^24.0.0"
commitizen = "^3.0.0"
darglint = "^1.8.1"
flake8 = "^7.0.0"
flake8-alphabetize = "^0.0.19"
flake8-bugbear = "^24.0.0"
flake8-comprehensions = "^3.10.0"
flake8-docstrings = "^1.5.0"
flake8-pytest-style = "^1.6.0"
flake8-use-fstring = "^1.1"
"github3.py" = "^3.2.0"
isort = "^5.10.1"
mccabe = "^0.7.0"
pre-commit = "^3.0.0"
pyright = "^1.1.267"

[tool.poetry.group.docs.dependencies]
furo = "*"
pypandoc = "^1.9"
Sphinx = "^7.0.0"

[tool.poetry.plugins."moe.plugins"]
"{plugin name}" = "moe_{plugin name}"

[tool.commitizen]
name = "cz_customize"
version = "0.1.0"
version_files = [
    "pyproject.toml:^version",
]
tag_format = "v$version"

[tool.commitizen.customize]
schema_pattern = '(build|ci|deprecate|docs|feat|fix|perf|refactor|release|style|test)(\(\w+\))?!?:\s\S.*'

[tool.isort]
profile = 'black'

[tool.pytest.ini_options]
log_cli_level = 10
addopts = "--color=yes"
markers = [
    "network: tests that make network calls",
    "darwin: tests that should only run on apple",
    "linux: tests that should only run on linux",
    "win32: tests that should only run on windows"
]

[tool.pyright]
exclude = [
    "alembic", "tests"
]
pythonPlatform = "All"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
